--- a/pipelines/loggregator-release-pipeline.yml
+++ b/pipelines/loggregator-release-pipeline.yml
@@ -82,7 +82,7 @@ resources:
     hostname: environments.toolsmiths.cf-app.com
     pool_name: cf-deployment
   tags:
-  - cf-denver-shared-vsphere
+  - vsphere-nimbus
 
 - name: log-egrets-channel
   type: slack-notification
@@ -125,7 +125,7 @@ jobs:
     trigger: true
   - put: cf-env
     tags:
-    - cf-denver-shared-vsphere
+    - vsphere-nimbus
     params:
       action: claim
 
@@ -136,7 +136,7 @@ jobs:
     passed:
     - claim-cf-env
     tags:
-    - cf-denver-shared-vsphere
+    - vsphere-nimbus
   - get: loggregator-release
     trigger: true
     passed:
@@ -184,7 +184,7 @@ jobs:
     passed:
     - cf-deploy
     tags:
-    - cf-denver-shared-vsphere
+    - vsphere-nimbus
   - get: cf-deployment-concourse-tasks
   - get: loggregator-ci
   - get: loggregator-release
@@ -209,7 +209,7 @@ jobs:
     passed:
     - system-health
     tags:
-    - cf-denver-shared-vsphere
+    - vsphere-nimbus
   - get: cf-deployment-concourse-tasks
   - get: cf-acceptance-tests
   - get: loggregator-ci
@@ -237,10 +237,10 @@ jobs:
     passed: ["cats"]
     trigger: true
     tags:
-      - cf-denver-shared-vsphere
+      - vsphere-nimbus
   - put: cf-env
     tags:
-      - cf-denver-shared-vsphere
+      - vsphere-nimbus
     params:
       env_file: cf-env/metadata
       action: unclaim
